implementacion buscador